# manage

./: README.org
api/manage-api/: .gitignore  README.md  gunicorn.sh  pyproject.toml  worker.sh
api/manage-api/manage_api/: __init__.py  config.py
api/manage-api/manage_api/cli/: tune_db.py
api/manage-api/manage_api/db/: __init__.py
api/manage-api/manage_api/db/models/: __init__.py  base.py  db.py  default_state.py  project.py  state.py  task.py  task_group.py  team.py  user.py  user_profile.py  user_teams.py
api/manage-api/manage_api/db/services/: __init__.py  helpers.py  pagination.py  project.py  task.py  task_group.py  team.py  user.py
api/manage-api/manage_api/misc/: __init__.py  types.py
api/manage-api/manage_api/routes/: __init__.py  common_schemas.py
api/manage-api/manage_api/routes/projects/: __init__.py
api/manage-api/manage_api/routes/projects/schemas/: __init__.py  request.py  response.py
api/manage-api/manage_api/routes/tasks/: __init__.py
api/manage-api/manage_api/routes/tasks/schemas/: __init__.py  request.py  response.py
api/manage-api/manage_api/routes/teams/: __init__.py
api/manage-api/manage_api/routes/teams/schemas/: request.py  response.py
api/manage-api/manage_api/routes/users/: __init__.py
api/manage-api/manage_api/routes/users/schemas/: request.py  (+1 more)
api/manage-api/manage_api/services/: __init__.py  exceptions.py
api/manage-api/manage_api/tasks/: __init__.py  celery_bridge.py
api/manage-api/tests/: conftest.py  test_manage_api.py  test_project_routes.py  test_task_routes.py  test_team_routes.py  test_user_routes.py
(+145 files in other folders)
